# cyd-nightstand

./: .gitignore  README.md  crop_icons.py  ha_states.json  sdkconfig.defaults
components/immich_sync/: CMakeLists.txt  immich_sync.c
components/immich_sync/include/: immich_sync.h
components/met_eireann_weather/: CMakeLists.txt  met_eireann_weather.c
components/met_eireann_weather/include/: met_eireann_weather.h
components/secrets/include/: secrets_example.h
main/: CMakeLists.txt  auto_dimming.c  auto_dimming.h  ha_sensor.c  ha_sensor.h  idf_component.yml  main.c  sd_card.c  sd_card.h  ui.c  ui.h  wifi_sntp.c  wifi_sntp.h
